Change Android package name(Application ID)
To meet
https://f-droid.org/docs/Inclusion_Policy/
https://central.sonatype.org/publish/requirements/coordinates/#choose-your-coordinates

--- a/Qt/android/AndroidManifest.xml
+++ b/Qt/android/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<manifest package="priv.wh201906.medifier.qt" xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="v0.1" android:versionCode="10" android:installLocation="auto">
+<manifest package="io.github.wh201906.medifier.qt" xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="v0.1" android:versionCode="10" android:installLocation="auto">
     <!-- The following comment will be replaced upon deployment with default permissions based on the dependencies of the application.
          Remove the comment if you do not require these default permissions. -->
 
@@ -10,7 +10,7 @@
 
     <supports-screens android:largeScreens="true" android:normalScreens="true" android:anyDensity="true" android:smallScreens="true"/>
     <application android:hardwareAccelerated="true" android:name="org.qtproject.qt5.android.bindings.QtApplication" android:label="mEDIFIER" android:extractNativeLibs="true">
-        <activity android:configChanges="orientation|uiMode|screenLayout|screenSize|smallestScreenSize|layoutDirection|locale|fontScale|keyboard|keyboardHidden|navigation|mcc|mnc|density" android:name="priv.wh201906.medifier.qt.MainActivity" android:label="-- %%INSERT_APP_NAME%% --" android:screenOrientation="unspecified" android:launchMode="singleTop">
+        <activity android:configChanges="orientation|uiMode|screenLayout|screenSize|smallestScreenSize|layoutDirection|locale|fontScale|keyboard|keyboardHidden|navigation|mcc|mnc|density" android:name="io.github.wh201906.medifier.qt.MainActivity" android:label="-- %%INSERT_APP_NAME%% --" android:screenOrientation="unspecified" android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
