--- a/Qt/android/AndroidManifest.xml
+++ b/Qt/android/AndroidManifest.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0"?>
-<manifest package="io.github.wh201906.medifier.qt" xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="v0.2" android:versionCode="20" android:installLocation="auto">
+<manifest
+    package="io.github.wh201906.medifier.qt"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:versionName="v0.2.1"
+    android:versionCode="21"
+    android:installLocation="auto">
     <!-- The following comment will be replaced upon deployment with default permissions based on the dependencies of the application.
          Remove the comment if you do not require these default permissions. -->
 
@@ -8,9 +13,22 @@
          Remove the comment if you do not require these default features. -->
     <!-- %%INSERT_FEATURES -->
 
-    <supports-screens android:largeScreens="true" android:normalScreens="true" android:anyDensity="true" android:smallScreens="true"/>
-    <application android:hardwareAccelerated="true" android:name="org.qtproject.qt5.android.bindings.QtApplication" android:label="mEDIFIER" android:extractNativeLibs="true">
-        <activity android:configChanges="orientation|uiMode|screenLayout|screenSize|smallestScreenSize|layoutDirection|locale|fontScale|keyboard|keyboardHidden|navigation|mcc|mnc|density" android:name="io.github.wh201906.medifier.qt.MainActivity" android:label="-- %%INSERT_APP_NAME%% --" android:screenOrientation="unspecified" android:launchMode="singleTop">
+    <supports-screens
+    android:largeScreens="true"
+    android:normalScreens="true"
+    android:anyDensity="true"
+    android:smallScreens="true"/>
+    <application
+        android:hardwareAccelerated="true"
+        android:name="org.qtproject.qt5.android.bindings.QtApplication"
+        android:label="mEDIFIER"
+        android:extractNativeLibs="true">
+        <activity
+            android:configChanges="orientation|uiMode|screenLayout|screenSize|smallestScreenSize|layoutDirection|locale|fontScale|keyboard|keyboardHidden|navigation|mcc|mnc|density"
+            android:name="io.github.wh201906.medifier.qt.MainActivity"
+            android:label="-- %%INSERT_APP_NAME%% --"
+            android:screenOrientation="unspecified"
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
